- Added: Holding [SHIFT] will allow you to generate all modification files. - Added: Testing against already vQModded files (using above). - Added: If you changed your admin folder, vQModerator will also adjust vQMod with your change. - Some small bugfixes.

--- a/admin/view/stylesheet/vqmod.css
+++ b/admin/view/stylesheet/vqmod.css
@@ -10,6 +10,19 @@
   background-color:#DAFFAF;
   padding:10px;
 }
+#vqgenerate {
+  border:2px solid #004799;
+  -webkit-border-radius:7px 7px 7px 7px;
+  -moz-border-radius:7px 7px 7px 7px;
+  -khtml-border-radius:7px 7px 7px 7px;
+  border-radius:7px 7px 7px 7px;
+  -webkit-box-shadow:7px 7px 7px #BBB;
+  -moz-box-shadow:7px 7px 7px #BBB;
+  box-shadow:7px 7px 7px #BBB;
+  background-color:#CAE3FF;
+  padding: 10px 10px 10px 60px;
+  cursor: pointer;
+}
 fieldset {
   position:relative;
   border-color:#004799;
